--- a/style.less
+++ b/style.less
@@ -66,36 +66,38 @@
 	}
 
 	&-toggler{
-		span{transition: .1 ease;}
+		span{transition: .1s ease;}
 
-		&:not(.collapsed){
-			.button;
-			margin: 6px;
-			padding: 0 5px;
-			border: none;
-			outline: none !important;
+		.button;
+		margin: 6px;
+		padding: 0 5px;
+		border: none;
+		outline: none !important;
 
-			&:active, &:focus, &:hover{
-				.bg-green2;
-				box-shadow: 2px 2px @green3;
-			}
+		&:active, &:focus, &:hover{
+			.bg-green2;
+			box-shadow: 2px 2px @green3;
+		}
 
-			.fas{
+		.fas{
+			text-decoration: none;
+			padding: 8px 5px;
+			color: @off-white;
+			font-size: 42px;
+
+			
+			&:hover{
 				text-decoration: none;
-				padding: 8px 5px;
-				color: @off-white;
-				font-size: 42px;
-
-				&.fa-bars{display: initial}
-
-				&.fa-times{display: none;}
-
-				&:hover{
-					text-decoration: none;
-					color: white;
-				}
+				color: white;
 			}
 		}
+
+		&:not(.collapsed){
+			&.fa-bars{display: initial;}
+
+			&.fa-times{display: none;}
+		}
+
 		&.collapsed{
 			&.fa-bars{display: none;}
 
@@ -119,13 +121,15 @@
 		.collapsing &{
 			li{
 				transform: translateX(100%);
-
-				&:nth-child(1){transition-delay: .1s;}
-				&:nth-child(2){transition-delay: .2s;}
-				&:nth-child(3){transition-delay: .3s;}
-				&:nth-child(4){transition-delay: .4s;}
-				&:nth-child(5){transition-delay: .5s;}
 			}
+		}
+
+		.collapsing &, .collapse &{
+			&:nth-child(1){transition-delay: .1s;}
+			&:nth-child(2){transition-delay: .2s;}
+			&:nth-child(3){transition-delay: .3s;}
+			&:nth-child(4){transition-delay: .4s;}
+			&:nth-child(5){transition-delay: .5s;}
 		}
 
 		.show &, .collapsing &{
