--- a/style.less
+++ b/style.less
@@ -92,16 +92,16 @@
 			}
 		}
 
-		&:not(.collapsed){
-			&.fa-bars{display: initial;}
-
-			&.fa-times{display: none;}
-		}
-
-		&.collapsed{
+		&[aria-expanded="true"]{
 			&.fa-bars{display: none;}
 
 			&.fa-times{display: initial;}
+		}
+
+		&[aria-expanded="false"]{
+			&.fa-bars{display: initial;}
+
+			&.fa-times{display: none;}
 		}
 	}
 
@@ -125,11 +125,13 @@
 		}
 
 		.collapsing &, .collapse &{
-			&:nth-child(1){transition-delay: .1s;}
-			&:nth-child(2){transition-delay: .2s;}
-			&:nth-child(3){transition-delay: .3s;}
-			&:nth-child(4){transition-delay: .4s;}
-			&:nth-child(5){transition-delay: .5s;}
+			li{
+				&:nth-child(1){transition-delay: .1s;}
+				&:nth-child(2){transition-delay: .2s;}
+				&:nth-child(3){transition-delay: .3s;}
+				&:nth-child(4){transition-delay: .4s;}
+				&:nth-child(5){transition-delay: .5s;}
+			}
 		}
 
 		.show &, .collapsing &{
