--- a/style.less
+++ b/style.less
@@ -68,6 +68,18 @@
 	&-toggler{
 		span{transition: .1s ease;}
 
+		&[aria-expanded="true"]{
+			.fa-bars{display: none;}
+
+			.fa-times{display: block;}
+		}
+
+		&[aria-expanded="false"]{
+			.fa-bars{display: block;}
+
+			.fa-times{display: none;}
+		}
+
 		.button;
 		margin: 6px;
 		padding: 0 5px;
@@ -85,23 +97,12 @@
 			color: @off-white;
 			font-size: 42px;
 
+			&.fa-times{padding: 8px 8.9375px}
 			
 			&:hover{
 				text-decoration: none;
 				color: white;
 			}
-		}
-
-		&[aria-expanded="true"]{
-			.fa-bars{display: none;}
-
-			.fa-times{display: initial;}
-		}
-
-		&[aria-expanded="false"]{
-			.fa-bars{display: initial;}
-
-			.fa-times{display: none;}
 		}
 	}
 
@@ -126,10 +127,10 @@
 
 		.collapsing &, .collapse &{
 			li{
-				&:nth-child(1){transition-delay: .75s;}
-				&:nth-child(2){transition-delay: .15s;}
-				&:nth-child(3){transition-delay: .225s;}
-				&:nth-child(4){transition-delay: .3s;}
+				&:nth-child(2){transition-delay: .75s;}
+				&:nth-child(3){transition-delay: .15s;}
+				&:nth-child(4){transition-delay: .225s;}
+				&:nth-child(5){transition-delay: .3s;}
 			}
 		}
 
