--- a/style.less
+++ b/style.less
@@ -207,6 +207,8 @@
 		padding: 0;
 		width: 100%;
 
+		.header{text-align: center;}
+
 		.button-group{
 			text-align: center;
 			padding-bottom: 4px;
