--- a/style.less
+++ b/style.less
@@ -308,7 +308,7 @@
 			opacity: 0;
 			transition: .25s ease-in;
 
-			.vignette{
+			#vignette{
 				background: linear-gradient(rgba(0,0,0,.35),rgba(36,36,36,.35));
 
 				span{font-size: 24px;}
