--- a/style.less
+++ b/style.less
@@ -177,6 +177,7 @@
 	 }
 
 	 &-indicators{
+		background-color: @off-white;
 		margin: 0;
 		position: static;
 		text-align: left;
@@ -253,7 +254,7 @@
 			}
 		}
 
-		section#imgCarousel{
+		section#imgCarousel.carousel{
 			.carousel-inner{
 				max-height: 600px;
 			}
