--- a/style.less
+++ b/style.less
@@ -1,3 +1,5 @@
+@import (less) "/css/flickity.css";
+
 @green1: #5dc094;
 @green2: #268f65;
 @green3: #00613a;
@@ -169,38 +171,38 @@
 		.button;
 	}
 
-	.carousel{
-		&-caption{
-		 top: 50%;
-		 transform: translateY(-50%);
-		 text-transform: initial;
-	 }
+// 	.carousel{
+// 		&-caption{
+// 		 top: 50%;
+// 		 transform: translateY(-50%);
+// 		 text-transform: initial;
+// 	 }
 
-	 &-indicators{
-		margin: 0;
-		position: static;
-		text-align: left;
-		width: 100%;
+// 	 &-indicators{
+// 		margin: 0;
+// 		position: static;
+// 		text-align: left;
+// 		width: 100%;
 
-		li {
-			background-color: transparent;
-			height: auto;
-			margin: 0;
-			width: auto;
+// 		li {
+// 			background-color: transparent;
+// 			height: auto;
+// 			margin: 0;
+// 			width: auto;
 
-			img {
-				display: block;
-				opacity: 0.5;
-				max-height: 100px;
-				max-width: 100%;
-			}
+// 			img {
+// 				display: block;
+// 				opacity: 0.5;
+// 				max-height: 100px;
+// 				max-width: 100%;
+// 			}
 
-			&.active img{opacity: 1;}
+// 			&.active img{opacity: 1;}
 
-			&:hover img{opacity: .75;}
-		}
-	 }
- }
+// 			&:hover img{opacity: .75;}
+// 		}
+// 	 }
+//  }
 
 	.container-fluid{
 		margin: 0;
