--- a/resume/resume.less
+++ b/resume/resume.less
@@ -2,7 +2,7 @@
 @mint: #53bb84;
 @gray-l: #666;
 @dark: #353744;
-*{font-family: 'Montserrat', sans-serif;}
+*{font-family: 'Montserrat', sans-serif !important;}
 
 h3{
 	color: @green;
@@ -10,7 +10,7 @@ h3{
 }
 
 .bar{
-	margin: 6px 0;
+	margin: 20px 0;
 	background-color: @mint;
 	height: 6px;
 }
