footer height fix

--- a/style.less
+++ b/style.less
@@ -374,12 +374,16 @@ footer{
 	
 	.carousel-caption{display: none;}
 
-	footer .icon{
-		max-width: 150px;
+	footer{
+		height: 509px;
+		.icon{
+			max-width: 150px;
 
-		.fab{
-			font-size: 20px;
-			padding: 10px;
+			.fab{
+				font-size: 20px;
+				padding: 10px;
+			}
 		}
 	}
+	 
 }
